--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -g")
 include_directories(.)
 
 # 核心模块的默认实现
-add_library(bridgedefault SHARED lib/_logger.c lib/_error.c lib/_memory.c lib/_io.c)
+add_library(bridgedefault SHARED lib/_logger.c lib/_error.c lib/_memory.c lib/_io.c lib/_modloader.c)
 
 # Bridge
 add_library(bridge        SHARED lib/bridge.c)
@@ -29,7 +29,11 @@ target_link_libraries(bridgelogger bridgedefault)
 add_library(bridgeio SHARED lib/io.c)
 target_link_libraries(bridgeio bridgedefault)
 
+# Bridge.ModLoader
+add_library(bridgemodloader lib/modloader.c)
+target_link_libraries(bridgemodloader bridgedefault)
 
+# =================
 add_executable(test.main test/main.c)
 target_link_libraries(test.main bridge)
 
@@ -38,3 +42,6 @@ target_link_libraries(test.io bridge)
 
 add_executable(test.logger test/logger.c)
 target_link_libraries(test.logger bridge)
+
+add_executable(test.modloader test/modloader.c)
+target_link_libraries(test.modloader bridge)
