--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(bridge)
 set(CMAKE_C_STANDARD   11)
 set(CMAKE_CXX_STANDARD 14)
 
-include_directories(.)
+include_directories(include)
 
 # 核心模块的默认实现
 add_subdirectory(lib  ${CMAKE_BINARY_DIR}/lib/bridge)
